new author message

--- a/index.html
+++ b/index.html
@@ -170,9 +170,11 @@
 				</div>
 			</div>
 			<div class=modal-footer>
-				Thank you,
+				Thank you.
 				<br/>
-				<a href="https://www.strongfirst.com/instructors/israel/alex-abugov.001370000076Tf1AAE/" target="_blank">Alex Abugov, SFG II</a>
+				<p style="font-size: 12px;color: gray;padding-top: 2px;">
+					About the <a href="https://www.strongfirst.com/instructors/israel/alex-abugov.001370000076Tf1AAE/" target="_blank">author</a> of this app
+				</p>
 			</div>
 		</div>
 	</div>
