--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <meta name="viewport" content="width=300">
     <meta name="mobile-web-app-capable" content="yes">
 
+    <meta property="og:title" content="Q&D Timer">
+    <meta property="og:site_name" content="github.io">
+    <meta property="og:description" content="Simple timer for the THE QUICK AND THE DEAD">
+    <meta property="og:image:width" content="192">
+    <meta property="og:image:height" content="192">
+    <meta property="og:image" content="https://abugov.github.io/qndtimer/icon192.png">
+
     <!-- for ios 7 style -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
