--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <meta property="og:image:width" content="192">
     <meta property="og:image:height" content="192">
     <meta property="og:image" content="https://abugov.github.io/qndtimer/icon192.png">
+    <meta property="og:type" content="website" />
+    <meta property="og:image:type" content="image/png">
 
     <!-- for ios 7 style -->
     <meta name="apple-mobile-web-app-capable" content="yes">
