--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <meta property="og:title" content="Q&D Timer">
     <meta property="og:site_name" content="github.io">
-    <meta property="og:description" content="Simple timer for the THE QUICK AND THE DEAD">
+    <meta property="og:description" content="Simple timer for THE QUICK AND THE DEAD">
     <meta property="og:image:width" content="192">
     <meta property="og:image:height" content="192">
-    <meta property="og:image" content="https://abugov.github.io/qndtimer/icon192.png">
+    <meta property="og:image:secure_url" content="https://abugov.github.io/qndtimer/icon192.png">
     <meta property="og:type" content="website" />
     <meta property="og:image:type" content="image/png">
 
@@ -28,11 +28,11 @@
 
 
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.json">
     <link rel="icon" sizes="192x192" href="icon192.png">
-	<link rel="icon" sizes="128x128" href="icon128.png">
+    <link rel="icon" sizes="128x128" href="icon128.png">
 	 
-	<script type="text/javascript" src="jquery.min.js"></script>
+    <script type="text/javascript" src="jquery.min.js"></script>
     <script type="text/javascript" src="js/jquery.longclick-1.0.min.js"></script>
 
     <script type="text/javascript" src="jplayer/jquery.jplayer.min.js"></script>
