--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta property="og:description" content="Simple timer for THE QUICK AND THE DEAD">
     <meta property="og:image:width" content="192">
     <meta property="og:image:height" content="192">
-    <meta property="og:image" content="https://abugov.github.io/qndtimer/icon192.png">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:secure_url" content="https://abugov.github.io/qndtimer/icon192.png">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image" content="https://abugov.github.io/qndtimer/icon192.jpg">    
+    <meta property="og:image:secure_url" content="https://abugov.github.io/qndtimer/icon192.jpg">
     <meta property="og:type" content="website" />
     	
     <meta name="application-name" content="Q&D Timer">
